[gd_scene load_steps=11 format=3 uid="uid://caoev6aamnb2n"]

[ext_resource type="Script" path="res://SoundPlayer.gd" id="1_bxr7m"]
[ext_resource type="AudioStream" uid="uid://dyeiulmqvekmw" path="res://audio/DL_MainAmbience.wav" id="2_esufu"]
[ext_resource type="AudioStream" uid="uid://ba1kmp1pvscp1" path="res://audio/DL_Menu_Music.wav" id="3_few4k"]

[sub_resource type="Animation" id="Animation_ge1p2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AmbiencePlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0ajc7"]
resource_name = "start_ambient"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AmbiencePlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AmbiencePlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ilcpj"]
_data = {
"RESET": SubResource("Animation_ge1p2"),
"start_ambient": SubResource("Animation_0ajc7")
}

[sub_resource type="Animation" id="Animation_ph7i8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}

[sub_resource type="Animation" id="Animation_jqaip"]
resource_name = "start_music"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="Animation" id="Animation_a7y8i"]
resource_name = "stop_music"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MusicPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qexxy"]
_data = {
"RESET": SubResource("Animation_ph7i8"),
"start_music": SubResource("Animation_jqaip"),
"stop_music": SubResource("Animation_a7y8i")
}

[node name="PlayerSoundPlayer" type="Node2D"]
script = ExtResource("1_bxr7m")

[node name="PlyrPlayers" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlyrPlayers"]
bus = &"PLYR"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="PlyrPlayers"]
bus = &"PLYR"

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="PlyrPlayers"]
bus = &"PLYR"

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="PlyrPlayers"]
bus = &"PLYR"

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer2D" parent="PlyrPlayers"]
bus = &"PLYR"

[node name="AudioStreamPlayer2D6" type="AudioStreamPlayer2D" parent="PlyrPlayers"]
bus = &"PLYR"

[node name="AudioStreamPlayer2D7" type="AudioStreamPlayer2D" parent="PlyrPlayers"]
bus = &"PLYR"

[node name="UIPlayers" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="UIPlayers"]
bus = &"UI"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="UIPlayers"]
bus = &"UI"

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="UIPlayers"]
bus = &"UI"

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="UIPlayers"]
bus = &"UI"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_few4k")
volume_db = -80.0
bus = &"MUSIC"

[node name="AmbiencePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_esufu")
bus = &"AMB"

[node name="AnimationPlayerAmbience" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayerMusic")
libraries = {
"": SubResource("AnimationLibrary_ilcpj")
}

[node name="AnimationPlayerMusic" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qexxy")
}

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
[connection signal="finished" from="AmbiencePlayer" to="." method="_on_ambience_player_finished"]
